# tarefa-freertos-1-filipe19

./: CMakeLists.txt  README.md  main.c
include/: FreeRTOSConfig.h
